--- a/layouts/404.html
+++ b/layouts/404.html
@@ -12,8 +12,8 @@
                     <h1 class="posttitle">{{ .Title }}</h1> 
                 </div>
                 <div class="article-post">
-                    Oops! Acho que o que voce estava procurando nao esta mais aqui.<br>
-                    Clique <a href="/">aqui</a> para voltar ao inicio.                
+                    Oops! This is obviously not what you are looking for.<br>
+                    Click <a href="/">here</a> to start all over again.                
                 </div>
             </div>
             <div class="col-md-1"></div>
